<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="152dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="96dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/loginTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/loginTable"
        android:layout_width="324dp"
        android:layout_height="116dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="123dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo">

        <TableRow>

            <TextView
                android:padding="8dp"
                android:text="@string/login_userName"
                style="@style/TextViewBody"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/login_userName_hint"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow android:layout_marginTop="30px">

            <TextView
                android:padding="8dp"
                android:text="@string/login_pass"
                style="@style/TextViewBody"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/login_pass_hint"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>
,.
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:text="@string/login_btn"
        style="@style/Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/loginTable" />

    <TextView
        android:id="@+id/APPNAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="APP NAME"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/loginTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
        style="@style/LoginAppName"/>


</androidx.constraintlayout.widget.ConstraintLayout>