<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer_homePage"
    android:orientation="vertical"
    android:background="@drawable/login_background">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:paddingTop="30dp">

    <TextView
        android:id="@+id/tvWelcomeCustomer"
        style="@style/TextViewHeader"
        android:layout_width="174dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_user"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logutCustomerDash"
        style="@style/Btn"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/customer_cartBtn" />

    <Button
        android:id="@+id/btnCart"
        style="@style/Btn"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/customer_logoutBtn" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        >
        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:drawable/edit_text"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Search"
            android:layout_marginLeft="20dp"
            style="@style/Btn"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>