<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="152dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="29dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/APPNAME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/loginTable"
        android:layout_width="349dp"
        android:layout_height="197dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TextViewBody"
                android:padding="8dp"
                android:text="Email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Email"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TextViewBody"
                android:padding="8dp"
                android:text="@string/login_userName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_userName_hint"
                android:inputType="textPersonName" />
        </TableRow>


        <TableRow
            android:layout_height="80dp"
            android:layout_marginTop="30px"
            android:paddingTop="10dp">

            <TextView
                style="@style/TextViewBody"
                android:padding="8dp"
                android:text="@string/login_pass"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pass_hint"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSignup"
        style="@style/Btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:text="Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/APPNAME"
        style="@style/LoginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="TECHY"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/loginTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />


</androidx.constraintlayout.widget.ConstraintLayout>